# elata-bio-sdk

./: .cursorignore  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  tsconfig.json
--help-test-placeholder/: README.md  index.html  package.json  sync-rppg-wasm-assets.mjs
--help-test-placeholder/src/: App.tsx
.changeset/: README.md  app-metrics-initial.md  app-payments-initial.md  hilbert-phase-hrv.md  npm-agent-docs.md  rppg-demo-template-polish.md  rppg-roi-hrv-bpm.md  shy-lamps-burn.md
.github/workflows/: ci.yml
android-demo/: README.md  settings.gradle.kts
android-demo/app/: build.gradle.kts  proguard-rules.pro
android-demo/eeg-sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ble/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ble/src/: styles.css
configs/cross_modal/: athena_phase2_fixture.toml  athena_prepare_fixture.toml  athena_prepare_live.toml  ds003838_failure_analysis_expanded.toml  ds003838_morphology_baseline.toml  ds003838_morphology_baseline_expanded.toml  ds003838_morphology_sweep_expanded.toml  ds003838_phase2_windows.toml  ds003838_phase2_windows_expanded.toml  ds003838_targets.toml  ds003838_targets_expanded.toml  ds004514_canonicalized_baseline.toml  ds004514_cross_modal_canonicalized.toml  ds004514_cross_modal_waveform.toml  ds004514_cross_modal_waveform_variant22.toml  ds004514_eeg_waveform.toml  ds004514_fnirs_waveform.toml  ds004514_phase2_windows.toml  ds004514_smoke.toml  ds004514_subject_quality_policy.json  ds004514_variant_routed_baseline.toml  ds006848_baseline_analysis_broader.toml  ds006848_baseline_analysis_cohort_swap.toml  ds006848_baseline_analysis_expanded.toml  ds006848_calibrated_absolute_amplitude_cohort_plus_sub011.toml  ds006848_calibrated_absolute_amplitude_cohort_plus_sub025.toml  ds006848_calibrated_absolute_amplitude_cohort_swap.toml  ds006848_calibrated_absolute_baseline_cohort_plus_sub011.toml  ds006848_calibrated_absolute_baseline_cohort_plus_sub011_sub025.toml  ds006848_calibrated_absolute_baseline_cohort_swap.toml  ds006848_calibrated_detail_summary_amplitude_cohort_plus_sub025.toml  ds006848_calibrated_family_comparison.toml  (+50 more)
crates/bridge-proto/: Cargo.toml
crates/bridge-proto/src/: lib.rs
crates/eeg-ffi/: Cargo.toml
crates/eeg-ffi/src/: lib.rs
crates/eeg-hal/: Cargo.toml
crates/eeg-hal-synthetic/: Cargo.toml
crates/eeg-hal-synthetic/src/: device.rs  generator.rs
crates/eeg-hal/src/: error.rs  lib.rs  sample.rs
crates/eeg-models/: Cargo.toml
crates/eeg-models/src/: alpha_bump.rs  alpha_peak.rs  calmness.rs  lib.rs  model.rs
crates/eeg-signal/: Cargo.toml
crates/eeg-signal/src/: fft.rs  filter.rs  lib.rs  power.rs  window.rs
crates/eeg-wasm/: Cargo.toml
crates/eeg-wasm/src/: athena.rs  lib.rs  models.rs  preprocess.rs  rppg.rs  signal.rs
crates/elata-dev-synthetic-ble-bridge/: Cargo.toml
crates/elata-dev-synthetic-ble-bridge/src/: main.rs  proto.rs
crates/elata-eeg-ffi/: Cargo.toml
crates/elata-eeg-ffi/src/: eeg_ffi.udl  lib.rs
crates/elata-eeg-hal/: Cargo.toml  README.md
crates/elata-eeg-hal/src/: channel.rs  device.rs  lib.rs
crates/elata-eeg-models/: Cargo.toml  README.md
crates/elata-eeg-models/src/: alpha_bump.rs  alpha_peak.rs  calmness.rs  lib.rs  model.rs
crates/elata-eeg-signal/: Cargo.toml  README.md
crates/elata-eeg-signal/src/: fft.rs  filter.rs  lib.rs  power.rs  preprocess.rs  window.rs
crates/elata-eeg-wasm/: Cargo.toml
crates/elata-eeg-wasm/src/: athena.rs  lib.rs  models.rs  preprocess.rs  signal.rs
crates/elata-facial-affect/: Cargo.toml  README.md
crates/elata-muse-proto/: Cargo.toml  README.md
crates/elata-muse-proto/src/: lib.rs  utils.rs
crates/elata-rppg/: Cargo.toml  README.md
crates/elata-rppg-wasm/: Cargo.toml
crates/elata-rppg-wasm/src/: lib.rs
crates/elata-rppg/examples/: benchmarkresults.txt  benchmarkrunner.rs  fixture_benchmark.rs
crates/elata-rppg/src/: benchmark.rs  lib.rs
crates/facial-affect/: Cargo.toml  README.md
crates/facial-affect/src/: lib.rs
crates/muse-proto/: Cargo.toml
crates/muse-proto/src/: athena.rs  classic.rs  lib.rs  utils.rs
crates/rppg/: Cargo.toml  README.md
crates/rppg-ffi/: Cargo.toml
crates/rppg-ffi/src/: lib.rs
crates/rppg-wasm/: Cargo.toml
crates/rppg-wasm/src/: lib.rs
crates/rppg/examples/: benchmarkrunner.rs
crates/rppg/src/: benchmark.rs  dsp.rs  harmonic.rs  lib.rs  pipeline.rs  subject_model.rs  tracker.rs
crates/synthetic-ble-bridge/: Cargo.toml
crates/synthetic-ble-bridge/src/: main.rs
docs/: README.md  architecture-rppg.md  architecture-sentiment.md  contributing-eeg-transports.md  create-elata-demo.md  dev_setup.md  implementation-plan-affect-reporting.md  implementation-plan-cross-modal-biosignals.md  implementation-plan-demo-scaffolding.md  implementation-plan-harmonic-selection.md  implementation-plan-ios-safari-ble-bridge.md  implementation-plan-multi-modality-and-rppg.md  implementation-plan-rppg-tradelock-imports.md  implementation-plan-rppg.md  implementation-plan-sdk-adoption.md  implementation-plan-sentiment.md  maintainers.md  pr-draft-elata-app-manifest.md  preprocessing-distortion-ledger.md  releasing.md  repo-map.md  rppg-model-evaluation.md  rppg-multi-roi-learned-reconstruction.md  sdk-adoption-baseline.md  sdk-adoption-issues.md  vendor-headset-onboarding-checklist.md
eeg-demo/: README.md  athena-recorder.html  athena-recorder.js  index.html  package-lock.json  package.json  playwright.config.js
examples/: basic-stream.ts  hal_demo.rs
ios-demo/: README.md
scripts/: ai-test.sh  audit-repo.mjs  build-android.sh  build-ios.sh  build-rppg-wasm-bindgen.sh  check-external-docs.mjs  check-mintlify-docs.mjs  compare_athena_decode.py  dev-link.sh  just-publish.sh  run-sh-tests.sh  smoke-consumer-tarballs.mjs  train_tabular_hr_classifier.py  validate-tarballs.mjs  verify-package-build.mjs
src/: lib.rs
tests/: hal_pipeline.rs
(+404 files in other folders)
