[package]
name = "eeg-hal-synthetic"
version = "0.1.0"
edition = "2021"
description = "Synthetic EEG device implementation for testing"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"

[dependencies]
eeg-hal = { path = "../eeg-hal" }
