[package]
name = "eeg-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for EEG SDK"
license = "MIT"
repository = "https://github.com/elata-bio/elata-sdk"
homepage = "https://github.com/elata-bio/elata-sdk#readme"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eeg-hal = { path = "../eeg-hal" }
eeg-signal = { path = "../eeg-signal" }
eeg-models = { path = "../eeg-models" }
rppg = { path = "../rppg" }
muse-proto = { path = "../muse-proto" }

wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Ensure getrandom's `js` backend is enabled for wasm targets
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
