[package]
name = "elata-dev-synthetic-ble-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Synthetic BLE bridge for EEG devices using the Elata SDK"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"
publish = false

[dependencies]
elata-muse-proto = { workspace = true }
elata-eeg-hal = { workspace = true }
elata-dev-eeg-synthetic = { workspace = true }
elata-eeg-models = { workspace = true }
elata-eeg-signal = { workspace = true }
pollster = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Foundation",
    "Foundation_Collections",
    "Security_Cryptography",
    "Storage_Streams",
] }
