[package]
name = "elata-eeg-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "FFI bindings for EEG SDK (iOS/Android)"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "eeg_ffi"

[dependencies]
elata-eeg-hal = { workspace = true }
elata-eeg-signal = { workspace = true }
elata-eeg-models = { workspace = true }
elata-rppg = { workspace = true }

uniffi = { version = "0.28" }
thiserror = "1.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["cli"]

[features]
cli = ["uniffi/cli"]
