[package]
name = "elata-eeg-hal"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Hardware Abstraction Layer for EEG devices"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"
documentation = "https://docs.rs/elata-eeg-hal"
readme = "README.md"
keywords = ["eeg", "biosignal", "hal", "signal"]
categories = ["science", "algorithms"]

[dependencies]
