[package]
name = "elata-eeg-signal"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Signal processing utilities for EEG data"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"
documentation = "https://docs.rs/elata-eeg-signal"
readme = "README.md"
keywords = ["eeg", "dsp", "fft", "biosignal"]
categories = ["science", "algorithms"]

[dependencies]
elata-eeg-hal = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
