[package]
name = "elata-eeg-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "WebAssembly bindings for EEG SDK"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"
publish = false

[lib]
name = "eeg_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
elata-eeg-hal = { workspace = true }
elata-eeg-signal = { workspace = true }
elata-eeg-models = { workspace = true }
elata-rppg = { workspace = true }
elata-muse-proto = { workspace = true }

wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Ensure getrandom's `js` backend is enabled for wasm targets
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
