[package]
name = "elata-facial-affect"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Calibration-based facial affect classifier core for Elata SDK"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk/tree/main/crates/elata-facial-affect"
readme = "README.md"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# no-op
