[package]
name = "elata-muse-proto"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "EEG headband BLE protocol constants and packet encoding/decoding (Muse-compatible)"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"
documentation = "https://docs.rs/elata-muse-proto"
readme = "README.md"
keywords = ["eeg", "ble", "muse", "protocol"]
categories = ["science", "encoding"]

[dependencies]
