[package]
name = "elata-rppg-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "WebAssembly bindings for the rPPG core"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"
publish = false

[lib]
name = "rppg_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
elata-rppg = { workspace = true }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
