[package]
name = "rppg-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the rPPG core"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk#readme"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rppg = { path = "../rppg" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
