[package]
name = "rppg"
version = "0.1.0"
edition = "2021"
authors = ["Elata Biosciences <devs@elata.bio>"]
description = "Remote photoplethysmography (rPPG) core for Elata SDK"
license = "MIT"
repository = "https://github.com/Elata-Biosciences/elata-bio-sdk"
homepage = "https://github.com/Elata-Biosciences/elata-bio-sdk/tree/main/crates/rppg"
readme = "README.md"

[lib]
name = "rppg"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFT for cepstrum/harmonic checks
rustfft = "6.0"
rand = "0.8"
rand_distr = "0.4"
